--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
+        distribution: 'adopt'
         java-version: 17
 
     - name: Buil JIB container and publish to GitHub Packages
