--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,7 +28,8 @@ jobs:
         java-version: 17
 
     - name: Buil JIB container and publish to GitHub Packages
-      run: mvn compile com.google.cloud.tools:jib-maven-plugin:3.1.4:build \
+      run: |
+       mvn compile com.google.cloud.tools:jib-maven-plugin:3.1.4:build \
        -Djib.to.image=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
        -Djib.to.auth.username=${{ env.USERNAME }} \
        -Djib.to.auth.password=${{ env.PASSWORD }}
