--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,6 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: downcase IMAGE_NAME
+      run: |
+        echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
     - uses: actions/checkout@v2
     - name: Set up JDK 17
       uses: actions/setup-java@v2
