--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,8 +34,7 @@ jobs:
 
     - name: Buil JIB container and publish to GitHub Packages
       run: |
-       mvn compile com.google.cloud.tools:jib-maven-plugin:3.1.4:build \
+       mvn compile com.google.cloud.tools:jib-maven-plugin:3.2.0:build \
        -Djib.to.image=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.release.tag_name }} \
        -Djib.to.auth.username=${{ env.USERNAME }} \
-       -Djib.to.auth.password=${{ env.PASSWORD }} \
-       -Djib.from.image=azul/zulu-openjdk:17-jre-headless
+       -Djib.to.auth.password=${{ env.PASSWORD }}
