--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,37 +4,11 @@ on:
   release:
     types: [created]
 
-env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
-  # Username to login to registry
-  USERNAME: ${{ github.actor }}
-  # Password to login to registry
-  PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   publish:
-
     runs-on: ubuntu-latest
-    
     steps:
-
-    - name: downcase IMAGE_NAME
-      run: |
-        echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-
-    - uses: actions/checkout@v2
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: 17
-
-    - name: Buil JIB container and publish to GitHub Packages
-      run: |
-       mvn compile com.google.cloud.tools:jib-maven-plugin:3.2.0:build \
-       -Djib.to.image=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.release.tag_name }} \
-       -Djib.to.auth.username=${{ env.USERNAME }} \
-       -Djib.to.auth.password=${{ env.PASSWORD }}
+      - name: JIB container build and publish
+        uses: MathieuSoysal/jib-container-publish.yml@v2.0.7
+        with:
+          PASSWORD: ${{ secrets.GITHUB_TOKEN }}
