--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # IntelliJ
 # Created by https://www.gitignore.io/api/intellij
 
+/target
+.vscode
+.cifuzz-build
+.cifuzz-corpus
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij
 
